5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1573_1331.log
== TEST (2019-03-11 15:33:41) 
-- CODE:
print(50//3,50/3)
-- OUTPUT:
16 16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:50) 
-- CODE:
print(50//3,50/3%)
-- ERROR:
File "XXXX", line 1
    print(50//3,50/3%)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:53) 
-- CODE:
print(50//3,50/3%)
-- ERROR:
File "XXXX", line 1
    print(50//3,50/3%)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:59) 
-- CODE:
print(50//3, 50/3%)
-- ERROR:
File "XXXX", line 1
    print(50//3, 50/3%)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:04) 
-- CODE:
print(50//3 , 50/3%)
-- ERROR:
File "XXXX", line 1
    print(50//3 , 50/3%)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:29) 
-- CODE:
print(50//3, 50%3)
-- OUTPUT:
16 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:31) 
-- CODE:
print(50//3, 50%3)
-- EXECUTION TIME:
0.17409
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16 2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
